[gd_scene load_steps=21 format=3 uid="uid://dbch3nuw8pnkn"]

[ext_resource type="Script" path="res://scenes/TestFinal/newPlayer.gd" id="1_ofh1u"]
[ext_resource type="Texture2D" uid="uid://beg5ahw1af5qx" path="res://assets/AnimationSheet_Character.png" id="2_ejdsl"]
[ext_resource type="PackedScene" uid="uid://cflwrb4c6hj8h" path="res://scenes/Gama/life_bar.tscn" id="6_bdseo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2vxdc"]
size = Vector2(30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqg8k"]
atlas = ExtResource("2_ejdsl")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3hhm"]
atlas = ExtResource("2_ejdsl")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4m7t"]
atlas = ExtResource("2_ejdsl")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61jp4"]
atlas = ExtResource("2_ejdsl")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj6gj"]
atlas = ExtResource("2_ejdsl")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dbyg"]
atlas = ExtResource("2_ejdsl")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdmpv"]
atlas = ExtResource("2_ejdsl")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsy4f"]
atlas = ExtResource("2_ejdsl")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_klfs3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqg8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3hhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4m7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61jp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj6gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dbyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdmpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsy4f")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_2yd3q"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(-3.97363e-08, 22), Vector2(-1.90735e-06, -4)]
}

[sub_resource type="Animation" id="Animation_0wjke"]
resource_name = "attack_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(-23, -4), Vector2(-1.90735e-06, -4)]
}

[sub_resource type="Animation" id="Animation_61853"]
resource_name = "attack_right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(23, -4), Vector2(-1.90735e-06, -4)]
}

[sub_resource type="Animation" id="Animation_coaak"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(-3.97363e-08, -32), Vector2(-1.90735e-06, -4)]
}

[sub_resource type="Animation" id="Animation_cvvqg"]
resource_name = "hit_wall"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(6.82121e-13, -3), Vector2(-6, -3), Vector2(7, -3), Vector2(-1.43051e-06, -3)]
}

[sub_resource type="Animation" id="Animation_c7y14"]
resource_name = "player_hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3iu28"]
_data = {
"attack_down": SubResource("Animation_2yd3q"),
"attack_left": SubResource("Animation_0wjke"),
"attack_right": SubResource("Animation_61853"),
"attack_up": SubResource("Animation_coaak"),
"hit_wall": SubResource("Animation_cvvqg"),
"player_hit": SubResource("Animation_c7y14")
}

[node name="Player" type="Area2D"]
position = Vector2(-1, -1)
script = ExtResource("1_ofh1u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_2vxdc")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(1.47793e-12, 1)
scale = Vector2(0.96875, 0.9375)
sprite_frames = SubResource("SpriteFrames_klfs3")
animation = &"idle"
frame_progress = 0.628539
centered = false

[node name="RayCast2DEnemy" type="RayCast2D" parent="."]
position = Vector2(16, 16)
target_position = Vector2(2.08165e-12, 32)
collide_with_areas = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(16, 16)
enabled = false
target_position = Vector2(2.08165e-12, 32)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3iu28")
}

[node name="StaffPositionTop" type="Node2D" parent="."]
visible = false
position = Vector2(16, 16)

[node name="StaffPositionBottom" type="Node2D" parent="."]
visible = false
position = Vector2(16, 16)

[node name="StaffPositionLeft" type="Node2D" parent="."]
visible = false
position = Vector2(16, 16)

[node name="StaffPositionRight" type="Node2D" parent="."]
visible = false
position = Vector2(16, 16)

[node name="RayCast2DMagic" type="RayCast2D" parent="."]
position = Vector2(16, 16)
scale = Vector2(0.833333, 0.833333)
target_position = Vector2(2.08165e-12, 32)
collide_with_areas = true

[node name="LifeBar" parent="." instance=ExtResource("6_bdseo")]
offset_top = -1.0
offset_bottom = -1.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
